# bootcamp-ai-program-learn

./: .gitignore  CLAUDE.md
.chats/: w2.md  w4.md  w5.md  w6.md
specs/001-db-query-tool/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-db-query-tool/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-mysql-support/: plan.md  quickstart.md  tasks.md
specs/w1/: 001-spec.md  002-implementation-plan.md  instructions.md
specs/w2/: 0001-improvement.md  constitution.md  instructions.md
specs/w3/: instructions.md
specs/w4/: apply-patch-by-hiyo-claude.md  codex-arch-by-claude.md  codex-arch-by-codex.md  codex-arch-by-hiyo-claude.md  codex-event-loop-by-hiyo-claude.md  codex-tool-call-by-hiyo-claude.md
specs/w5/: 0001-pg-mcp-prd.md  0002-pg-mcp-design.md  0004-pg-mcp-impl-plan.md  0005-pg-mcp-impl-plan-review.md  0006-pg-mcp-codereview.md  0007-pg-mcp-test-plan.md  0008-pg-mcp-test-plan-review.md  0009-pg-mcp-remediation-plan.md
specs/w6/: 0001-simple-agent-design.md
w1/project-alpha/: .gitignore  Makefile  README.md  seed.sql
w1/project-alpha/backend/: README.md  alembic.ini  pyproject.toml
w1/project-alpha/backend/app/: __init__.py  main.py
w1/project-alpha/backend/app/api/: router.py
w1/project-alpha/backend/app/api/routes/: health.py  tags.py  tickets.py
w1/project-alpha/backend/app/core/: __init__.py  config.py  database.py  db.py  errors.py
w1/project-alpha/backend/app/models/: __init__.py  entities.py
w1/project-alpha/backend/app/models/schemas/: __init__.py  health.py  tag.py  ticket.py
w1/project-alpha/backend/app/repositories/: __init__.py  health_repository.py  tag_repository.py  ticket_repository.py  ticket_tag_repository.py
w1/project-alpha/backend/app/services/: __init__.py  health_service.py  tag_service.py  ticket_service.py
w1/project-alpha/backend/migrations/: env.py
w1/project-alpha/backend/migrations/versions/: 20260214_0001_create_ticketing_core.py
w1/project-alpha/backend/scripts/: seed_db.py
w1/project-alpha/backend/tests/: conftest.py  test_api_integration.py  test_health.py  test_repositories.py  test_tag_api.py  test_tag_service.py  test_ticket_api.py  test_ticket_list_performance.py  test_ticket_service.py
w1/project-alpha/backend/tests/helpers/: db_env.py
w2/db_query/: .gitignore  Makefile  README.md  package-lock.json  package.json  pyproject.toml
w2/db_query/backend/: README.md  pyproject.toml
w2/db_query/backend/src/: __init__.py  main.py
w2/db_query/backend/src/api/: __init__.py
w2/db_query/backend/src/api/v1/: dbs.py  query.py
w2/db_query/backend/src/application/: __init__.py  database_orchestrator.py
w2/db_query/backend/src/domain/interfaces/: __init__.py  db_adapter.py
w2/db_query/backend/src/infrastructure/: registry.py
w2/db_query/backend/src/infrastructure/adapters/mysql/: __init__.py  adapter.py
w2/db_query/backend/src/infrastructure/adapters/postgres/: __init__.py  adapter.py
w2/db_query/backend/src/models/: __init__.py  connection.py  error.py  metadata.py  query.py
w2/db_query/backend/src/services/: __init__.py  connection_service.py  dialect_service.py  llm_service.py  metadata_service.py  query_service.py
w2/db_query/backend/src/storage/: sqlite_store.py
w2/db_query/backend/tests/: test_connection_errors.py  test_natural_sql_mysql_fallback.py
w3/raflow/: .gitignore  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json
w3/raflow/src/: App.css  App.tsx
w3/raflow/src-tauri/: Cargo.toml  tauri.conf.json
w3/raflow/src-tauri/capabilities/: default.json
w3/raflow/src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  metrics.rs  permissions.rs  secure_storage.rs  state.rs  utils.rs
w3/raflow/src-tauri/src/audio/: capturer.rs  denoiser.rs  mod.rs  resampler.rs
w3/raflow/src-tauri/src/input/: injector.rs  mod.rs
w3/raflow/src-tauri/src/network/: mod.rs  scribe_client.rs
w3/raflow/src/components/: OverlayWindow.tsx  SettingsPanel.tsx
w5/pg-mcp/: .env.example  .env.test  CLAUDE.md  Dockerfile  Makefile  README.md  claude_desktop_config.example.json  docker-compose.test.yml  main.py  pyproject.toml  pytest.ini  ruff.toml
w5/pg-mcp/docs/: CODEX_USAGE.md
w5/pg-mcp/fixtures/: blog_small.sql  ecommerce_medium.sql  saas_crm_large.sql  test.md
w5/pg-mcp/pg_mcp/: __init__.py  __main__.py  context.py  request_context.py  server.py
w5/pg-mcp/pg_mcp/config/: __init__.py  settings.py
w5/pg-mcp/pg_mcp/exceptions/: __init__.py  errors.py
w5/pg-mcp/pg_mcp/models/: __init__.py  request.py  response.py  schema.py
w5/pg-mcp/pg_mcp/security/: __init__.py  validator.py
w5/pg-mcp/pg_mcp/services/: __init__.py  executor.py  llm.py  rate_limiter.py  schema.py
w5/pg-mcp/pg_mcp/utils/: logging.py
w5/pg-mcp/tests/: conftest.py  test_config.py  test_context.py  test_exceptions.py  test_executor.py  test_lifespan.py  test_llm.py  test_main.py  test_models.py  test_rate_limiter.py  test_schema.py  test_tool.py  test_validator.py
w5/pg-mcp/tests/fixtures/: init.sql
w5/pg-mcp/tests/integration/: test_e2e.py
w6/opencode-introspection/: .gitignore  README.md  chat.md
w6/simple-agent/: DESIGN_SPEC_CHECKLIST.md  README.md  package-lock.json  (+2 more)
(+125 files in other folders)
