[workspace]
members = ["src-tauri"]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-build = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
cpal = "0.15"
rubato = "0.15"
rtrb = "0.3"
nnnoiseless = { version = "0.5", default-features = false }
enigo = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
keyring = "3"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
